<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/bottom_menu_home"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_icon_ex" />

    <item
        android:id="@+id/menu_category"
        android:title="@string/bottom_menu_category"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_icon_ex" />

    <item
        android:id="@+id/menu_my"
        android:title="@string/bottom_menu_my"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_icon_ex" />

    <item
        android:id="@+id/menu_setting"
        android:title="@string/bottom_menu_setting"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_icon_ex" />
</menu>