<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<data>
		
		<import type="org.positive.daymotion.presentation.login.LoginActivity.LoginWay" />
		
		<variable
			name="handler"
			type="org.positive.daymotion.presentation.login.LoginActivity.Handler" />
	</data>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorWhite"
		android:fitsSystemWindows="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@id/personalInformation"
			tools:ignore="MissingConstraints">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/daymotion"
				android:layout_gravity="center"
				android:textSize="27sp"
				android:textColor="@color/colorBlack_17"
				android:fontFamily="@font/montserrat_bold"
				tools:ignore="MissingConstraints" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_marginTop="15dp"
				android:lineSpacingExtra="5dp"
				android:text="@string/sub_title"
				android:textSize="16sp"
				android:textColor="@color/colorBlack_17"
				android:fontFamily="@font/kopub_dotum_medium"
				android:alpha="0.6"
				tools:ignore="MissingConstraints" />

			<Button
				android:id="@+id/googleLoginButton"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_marginTop="40dp"
				android:paddingStart="20dp"
				android:paddingEnd="15dp"
				android:background="@drawable/background_login_button"
				android:onClick="@{() -> handler.requestLogin(LoginWay.GOOGLE)}"
				android:text="@string/login_button"
				android:textAlignment="textStart"
				android:textAllCaps="false"
				android:textSize="14sp"
				android:textColor="@color/colorBlack_17"
				android:fontFamily="@font/kopub_dotum_light"
				android:drawableRight="@drawable/google_icon"
				style="?android:attr/borderlessButtonStyle" />

			<Button
				android:id="@+id/naverLoginButton"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_marginTop="8dp"
				android:paddingStart="20dp"
				android:paddingEnd="15dp"
				android:background="@drawable/background_login_button"
				android:text="@string/login_button"
				android:textAlignment="textStart"
				android:textAllCaps="false"
				android:textColor="@color/colorBlack_17"
				android:textSize="14sp"
				android:fontFamily="@font/kopub_dotum_light"
				android:drawableRight="@drawable/naver_icon"
				android:drawablePadding="37dp"
				style="?android:attr/borderlessButtonStyle" />

			<Button
				android:id="@+id/facebookLoginButton"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_marginTop="8dp"
				android:paddingStart="20dp"
				android:paddingEnd="15dp"
				android:background="@drawable/background_login_button"
				android:text="@string/login_button"
				android:textAlignment="textStart"
				android:textAllCaps="false"
				android:textColor="@color/colorBlack_17"
				android:textSize="14sp"
				android:fontFamily="@font/kopub_dotum_light"
				android:drawableRight="@drawable/facebook_icon"
				android:drawablePadding="37dp"
				style="?android:attr/borderlessButtonStyle" />

			<Button
				android:id="@+id/kakaoLoginButton"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_marginTop="8dp"
				android:paddingStart="20dp"
				android:paddingEnd="15dp"
				android:background="@drawable/background_login_button"
				android:onClick="@{() -> handler.requestLogin(LoginWay.KAKAO)}"
				android:text="@string/login_button"
				android:textAlignment="textStart"
				android:textAllCaps="false"
				android:textColor="@color/colorBlack_17"
				android:textSize="14sp"
				android:fontFamily="@font/kopub_dotum_light"
				android:drawableRight="@drawable/kakao_icon"
				android:drawablePadding="37dp"
				style="?android:attr/borderlessButtonStyle" />

		</LinearLayout>

		<RelativeLayout
			android:id="@+id/personalInformation"
			android:layout_width="match_parent"
			android:layout_height="124dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:paddingStart="20dp"
			android:paddingEnd="20dp"
			android:gravity="center_vertical"
			android:background="@color/colorGray200">

			<ImageView
				android:id="@+id/infoIcon"
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_info"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/info_title"
				android:textSize="14sp"
				android:textColor="@color/colorBlack_17"
				android:fontFamily="@font/kopub_dotum_bold"
				android:layout_toRightOf="@id/infoIcon"
				android:layout_marginStart="5dp"/>

			<TextView
				android:id="@+id/tvInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:alpha="0.5"
				android:lineSpacingExtra="3dp"
				android:text="@string/info_content"
				android:textSize="12sp"
				android:textColor="@color/colorBlack_17"
				android:fontFamily="@font/kopub_dotum_light"
				android:layout_below="@id/infoIcon"/>

		</RelativeLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>